# Mental-games

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  db.py  main.py
app/static/: index.html
app/static/css/: styles.css
app/static/games/: memory-match.html  reaction-time.html  schulte-table.html  sequence-memory.html  track-switch.html
app/static/js/: api.js  hub.js  memory-match.js  reaction-time.js  schulte-table.js  sequence-memory.js  track-switch.js
