[project]
name = "mental-games"
version = "0.1.0"
description = "A faithful clone of AI Fiesta's brain games: Memory Match, Sequence Memory, Schulte Table, Reaction Time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
